Adição pastas faltantes, correção CSS, edição ícones

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main class="cadlog-centro">
    <section class="logo">
-    <img src="assets/img/plant-icon.svg" alt="Ilustração de planta não especificada" class="plant-icon">
+    <img src="assets/img/icons/plant-icon.svg" alt="Ilustração de planta não especificada" class="plant-icon">
     <h1>plantagram</h1>
     <p class="subtitle">A rede social de plantas</p>
   </section>
@@ -42,8 +42,10 @@
 
       <a href="/pages/senha.html" class="senha">Esqueci minha senha</a>
       
-      <a href="/pages/feed.html" class="btn-entrar">Entrar</a>
+      <div class="btn-container">
       <a href="/pages/cadastro.html" class="btn-cadastre-se">Cadastre-se</a>
+      <a href="/pages/feed.html" class="btn-entrar">Entrar</a>
+    </div>
     </form>
    
   </main>
