--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -25,22 +25,22 @@
   <section class="search-container">
     <i class="fa-solid fa-magnifying-glass"></i>
     <input type="search" placeholder="Pesquisar...">
-    <a href="/pages/perfil.html"><img src="/assets/img/profile-icon.png" class="profile-icon"></a>
+    <a href="/pages/perfil.html"><img src="/assets/img/icons/profile-icon.png" class="profile-icon"></a>
   </section>
 
   <nav class="menu-lateral">
     <ul>
-      <li class="logo-small"><img src="/assets/img/plant-icon.svg" class="plant-icon-small"> plantagram</li>
+      <li class="logo-small"><img src="/assets/img/icons/plant-icon.svg" class="plant-icon-small"> plantagram</li>
 
-      <li><a href="/pages/feed.html" class="bold-inicial menu-item"><img src="/assets/img/inicial-vazado.png" class="icon state1 inicial-inactive"> <img src="/assets/img/inicial-preenchido.png" class="icon state2 inicial-active"> Página inicial</a></li>
+      <li><a href="/pages/feed.html" class="bold-inicial menu-item"><img src="/assets/img/icons/inicial-vazado.png" class="icon state1 inicial-inactive"> <img src="/assets/img/icons/inicial-preenchido.png" class="icon state2 inicial-active"> Página inicial</a></li>
 
-      <li><a href="/pages/explorar.html" class="bold-explorar menu-item"><img src="/assets/img/explorar-vazado.png" class="icon state1 explorar-inactive"> <img src="/assets/img/explorar-preenchido.png" class="icon state2 explorar-active">Explorar</a></li>
+      <li><a href="/pages/explorar.html" class="bold-explorar menu-item"><img src="/assets/img/icons/explorar-vazado.png" class="icon state1 explorar-inactive"> <img src="/assets/img/icons/explorar-preenchido.png" class="icon state2 explorar-active">Explorar</a></li>
 
-      <li><a href="/pages/salvos.html" class="bold-salvos menu-item"> <img src="/assets/img/tag-vazado.png" class="icon state1 salvos-inactive"> <img src="/assets/img/tag-preenchido.png" class="icon state2 salvos-active"> Itens Salvos</a></li>
+      <li><a href="/pages/salvos.html" class="bold-salvos menu-item"> <img src="/assets/img/icons/tag-vazado.png" class="icon state1 salvos-inactive iconSalvos"> <img src="/assets/img/icons/tag-preenchido.png" class="icon state2 salvos-active iconSalvos"> Itens Salvos</a></li>
 
-      <li><a href="/pages/perfil.html" class="bold-perfil menu-item"> <img src="/assets/img/perfil-vazado.png" class="icon state1 perfil-inactive"> <img src="/assets/img/perfil-preenchido.png" class="icon state2 perfil-active"> Perfil</a></li>
+      <li><a href="/pages/perfil.html" class="bold-perfil menu-item"> <img src="/assets/img/icons/perfil-vazado.png" class="icon state1 perfil-inactive"> <img src="/assets/img/icons/perfil-preenchido.png" class="icon state2 perfil-active"> Perfil</a></li>
 
-      <li><a href="/index.html" class="bold menu-item"> <img src="/assets/img/sair-vazado.png" class="icon state1 sair-inactive"> <img src="/assets/img/sair-preenchido.png" class="icon state2 sair-active"> Sair</a></li>
+      <li><a href="/index.html" class="bold menu-item"> <img src="/assets/img/icons/sair-vazado.png" class="icon state1 sair-inactive"> <img src="/assets/img/icons/sair-preenchido.png" class="icon state2 sair-active"> Sair</a></li>
     </ul>
   </nav>
 
