--- a/pages/senha.html
+++ b/pages/senha.html
@@ -24,7 +24,7 @@
 <body>
     <main class="cadlog-centro">
         <section class="logo">
-         <img src="/assets/img/plant-icon.svg" alt="Ilustração de planta não especificada" class="plant-icon">
+         <img src="/assets/img/icons/plant-icon.svg" alt="Ilustração de planta não especificada" class="plant-icon">
          <h1>plantagram</h1>
          <p class="subtitle">A rede social de plantas</p>
        </section>
